# magazine-clippings-cpp-template

./: CMakeLists.txt  README.md  main.cpp
plays/: othello.txt  romeo_and_juliet.txt
src/: magazine_clippings.cpp  magazine_clippings.hpp
tests/: magazine_clippings_test.cpp
